# DynamicNestedField

./: LICENSE.txt  README.md  pyproject.toml  requirements.txt  setup.cfg
src/DynamicNestedField/: DjangoModelsFields.py  DynamicNestedField.py
src/DynamicNestedField.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
