[metadata]
name = DynamicNestedField
version = 0.0.4
author = Nameer Haider
author_email = nmeer5242@gmail.com
description = DynamicNestedField is a set of tools used to perform dynamic nested operation on django models.
long_description = file: README.md, LICENSE.txt
long_description_content_type = text/markdown
url = https://github.com/NAMEER242/DynamicNestedField
project_urls =
    Bug Tracker = https://github.com/NAMEER242/DynamicNestedField/issues
    repository = https://github.com/NAMEER242/DynamicNestedField
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Development Status :: 4 - Beta
    Framework :: Django

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.9

[options.packages.find]
where = src