[metadata]
name = DynamicNestedField
version = 0.0.12
author = Nameer Haider
author_email = nmeer5242@gmail.com
description = DynamicNestedField is a set of tools used to perform dynamic nested operation on django models.
long_description = file: README.md, LICENSE.txt
long_description_content_type = text/markdown
url = https://github.com/NAMEER242/DynamicNestedField
project_urls =
    Bug Tracker = https://github.com/NAMEER242/DynamicNestedField/issues
    repository = https://github.com/NAMEER242/DynamicNestedField
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Development Status :: 4 - Beta
    Framework :: Django

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.9
install_requires=
    setuptools>=42
    asgiref>=3.5.2
    Django>=4.1.3
    djangorestframework>=3.14.0
    pytz>=2022.6
    sqlparse>=0.4.3
    tzdata>=2022.6
    django-restql==0.15.3
    django-filter==22.1

[options.packages.find]
where = src